Als product owner wil ik een stage applicatie in plaats van een gemeente website
