# api/public/schema/openapi.yaml
@@ -2379,12 +2379,12 @@ definitions:
         description: 'The moment this request was created'
         type: string
         format: date-time
-        example: '2020-07-16 06:29:28'
+        example: '2020-07-21 08:27:15'
       dateModified:
         description: 'The moment this request last Modified'
         type: string
         format: date-time
-        example: '2020-07-16 06:29:28'
+        example: '2020-07-21 08:27:15'
     required: []
   AuditTrail-write:
     properties:
@@ -2432,12 +2432,12 @@ definitions:
         description: 'The moment this request was created'
         type: string
         format: date-time
-        example: '2020-07-16 06:29:28'
+        example: '2020-07-21 08:27:15'
       dateModified:
         description: 'The moment this request last Modified'
         type: string
         format: date-time
-        example: '2020-07-16 06:29:28'
+        example: '2020-07-21 08:27:15'
     required: []
   ChangeLog-write:
     properties:
@@ -2478,8 +2478,8 @@ securityDefinitions:
 host: irc.zaakonline.nl
 servers:
   -
-    name: zuid-drecht.nl
-    url: pan.dev.zuid-drecht.nl
+    name: conduction.nl
+    url: pan.dev.conduction.nl
 externalDocs:
   -
     description: 'OAS Documentatie'
